# swarm-cuda

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  vcpkg.json
docs/: API.md  ARCHITECTURE.md  README (1).md  USER_MANUAL.md  White Screen Crash Issue.md
shaders/: agent.frag  agent.vert  bloom_blur.frag  bloom_bright.frag  bloom_composite.frag  cull.comp  debug_vec.frag  debug_vec.vert  fullscreen.vert  line.frag  line.vert  points.frag  points.vert  text.frag  text.vert  trail.frag  trail.vert  trail_update.comp
src/: agent.h  agent_layout.h  camera.cpp  camera.h  debug_draw.cpp  debug_draw.h  error.cpp  error.h  gl_buffer.cpp  gl_buffer.h  gl_shader.cpp  gl_shader.h  interop_cuda_gl.cu  interop_cuda_gl.h  kernels.cu  kernels.h  main.cpp  neighbor_query.cuh  obstacles.cpp  obstacles.h  platform.h  presets.cpp  presets.h  presets.json  renderer.cpp  renderer.h  scenarios.cpp  scenarios.h  simulation.cu  simulation.h  spatial_hash.cu  spatial_hash.h  time_stats.cpp  time_stats.h  ui.cpp  ui.h
